crates/biome_module_graph/tests/snapshots/test_infer_module_types_evaluates_await_expressions_on_build.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export const promised: Promise<string> = Promise.resolve("value");

export async function consume() {
	const awaited = await promised;
	const primitive = await 1;
	return awaited;
}
```

## Inferred types

```
Binding promised "promised" => instanceof Promise<string>

Expression "Promise" => class "Promise" {
  extends: none
  implements: []
  type_args: [T]
}

Expression "Promise.resolve" => sync Function "resolve" {
  accepts: {
    params: [
      required value: TResolveValue
    ]
    type_args: [TResolveValue]
  }
  returns: instanceof Promise<TResolveValue>
}

Expression "Promise.resolve(\"value\")" => instanceof Promise<string: value>

Expression "\"value\"" => string: value

Binding consume "consume" => async Function "consume" {
  accepts: {
    params: []
    type_args: []
  }
  returns: instanceof Promise<string>
}

Binding awaited "awaited" => string

Expression "await promised" => string

Expression "promised" => instanceof Promise<string>

Binding primitive "primitive" => number: 1

Expression "await 1" => number: 1

Expression "1" => number: 1

Expression "awaited" => string
```
